<resources>
    <string name="app_name">"Atlas Engine"</string>

    <string name="app_name_information">"Atlas Engine Information"</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    //Menu items
    <string name="items1">Information</string>
    <string name="items2">Signpost</string>
    <string name="items3">More content</string>
    <string name="items4">Tools</string>
    //Text backboard
    <string name="textSample">Write text</string>
    <string name="message_0">Digite un texto por favor</string>
    <string name="message_dialog_text">Text Options</string>
    <string name="message_dialog_image">Image Options</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="lorem_ipsum"><![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum. Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus. Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum. Sed volutpat urna quis nisi vulputate egestas. Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.\n\nPhasellus orci mi, eleifend nec congue id, volutpat at neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer semper velit vel leo rutrum sed fermentum elit porta.]]></string>

    //String Colors
    <string-array name="colors">
        <item>#000000</item>
        <item>#000080</item>
        <item>#00008B</item>
        <item>#0000CD</item>
        <item>#0000FF</item>
        <item>#006400</item>
        <item>#008000</item>
        <item>#008080</item>
        <item>#008B8B</item>
        <item>#00BFFF</item>
        <item>#00CED1</item>
        <item>#00FA9A</item>
        <item>#00FF00</item>
        <item>#00FF7F</item>
        <item>#00FFFF</item>
        <item>#00FFFF</item>
        <item>#191970</item>
        <item>#1E90FF</item>
        <item>#20B2AA</item>
        <item>#228B22</item>
        <item>#2E8B57</item>
        <item>#2F4F4F</item>
        <item>#32CD32</item>
        <item>#3CB371</item>
        <item>#40E0D0</item>
        <item>#4169E1</item>
        <item>#4682B4</item>
        <item>#483D8B</item>
        <item>#48D1CC</item>
        <item>#4B0082</item>
        <item>#556B2F</item>
        <item>#5F9EA0</item>
        <item>#6495ED</item>
        <item>#66CDAA</item>
        <item>#696969</item>
        <item>#6A5ACD</item>
        <item>#6B8E23</item>
        <item>#708090</item>
        <item>#778899</item>
        <item>#7B68EE</item>
        <item>#7CFC00</item>
        <item>#7FFF00</item>
        <item>#7FFFD4</item>
        <item>#800000</item>
        <item>#800080</item>
        <item>#808000</item>
        <item>#808080</item>
        <item>#87CEEB</item>
        <item>#87CEFA</item>
        <item>#8A2BE2</item>
        <item>#8B0000</item>
        <item>#8B008B</item>
        <item>#8B4513</item>
        <item>#8FBC8F</item>
        <item>#90EE90</item>
        <item>#9370DB</item>
        <item>#9400D3</item>
        <item>#98FB98</item>
        <item>#9932CC</item>
        <item>#9ACD32</item>
        <item>#A0522D</item>
        <item>#A52A2A</item>
        <item>#A9A9A9</item>
        <item>#ADD8E6</item>
        <item>#ADFF2F</item>
        <item>#AFEEEE</item>
        <item>#B0C4DE</item>
        <item>#B0E0E6</item>
        <item>#B22222</item>
        <item>#B8860B</item>
        <item>#BA55D3</item>
        <item>#BC8F8F</item>
        <item>#BDB76B</item>
        <item>#C0C0C0</item>
        <item>#C71585</item>
        <item>#CD5C5C</item>
        <item>#CD853F</item>
        <item>#D2691E</item>
        <item>#D2B48C</item>
        <item>#D3D3D3</item>
        <item>#D8BFD8</item>
        <item>#DA70D6</item>
        <item>#DAA520</item>
        <item>#DB7093</item>
        <item>#DC143C</item>
        <item>#DCDCDC</item>
        <item>#DDA0DD</item>
        <item>#DEB887</item>
        <item>#E0FFFF</item>
        <item>#E6E6FA</item>
        <item>#E9967A</item>
        <item>#EE82EE</item>
        <item>#EEE8AA</item>
        <item>#F08080</item>
        <item>#F0E68C</item>
        <item>#F0F8FF</item>
        <item>#F0FFF0</item>
        <item>#F0FFFF</item>
        <item>#F4A460</item>
        <item>#F5DEB3</item>
        <item>#F5F5DC</item>
        <item>#F5F5F5</item>
        <item>#F5FFFA</item>
        <item>#F8F8FF</item>
        <item>#FA8072</item>
        <item>#FAEBD7</item>
        <item>#FAF0E6</item>
        <item>#FAFAD2</item>
        <item>#FDF5E6</item>
        <item>#FF0000</item>
        <item>#FF00FF</item>
        <item>#FF00FF</item>
        <item>#FF1493</item>
        <item>#FF4500</item>
        <item>#FF6347</item>
        <item>#FF69B4</item>
        <item>#FF7F50</item>
        <item>#FF8C00</item>
        <item>#FFA07A</item>
        <item>#FFA500</item>
        <item>#FFB6C1</item>
        <item>#FFC0CB</item>
        <item>#FFD700</item>
        <item>#FFDAB9</item>
        <item>#FFDEAD</item>
        <item>#FFE4B5</item>
        <item>#FFE4C4</item>
        <item>#FFE4E1</item>
        <item>#FFEBCD</item>
        <item>#FFEFD5</item>
        <item>#FFF0F5</item>
        <item>#FFF5EE</item>
        <item>#FFF8DC</item>
        <item>#FFFACD</item>
        <item>#FFFAF0</item>
        <item>#FFFAFA</item>
        <item>#FFFF00</item>
        <item>#FFFFE0</item>
        <item>#FFFFF0</item>
        <item>#FFFFFF</item>
    </string-array>

    //data menu menu navigation drawer

    <string name="option0">Video content</string>
    <string name="option1">Image content</string>
    <string name="option2">Content multiple images</string>
    <string name="option3">Content multiple images 2</string>
    <string name="option4">Content multiple pages</string>
    <string name="option5">Content PDF</string>

    <string-array name="title">
        <item>Title 1</item>
        <item>Title 2</item>
        <item>Title 3</item>
        <item>Title 4</item>
        <item>Title 5</item>
        <item>Title 6</item>
    </string-array>
</resources>
