<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/option0" />
        <item
            android:id="@+id/nav_image"
            android:icon="@drawable/ic_image"
            android:title="@string/option1" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/option2" />
        <item
            android:id="@+id/nav_gallery2"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/option3"/>
        <item
            android:id="@+id/nav_multi_page"
            android:icon="@drawable/ic_chrome_reader"
            android:title="@string/option4"/>
    </group>

    <item android:title="Other content">
        <menu>
            <item
                android:id="@+id/nav_pdf"
                android:icon="@drawable/ic_picture_pdf"
                android:title="@string/option5" />

        </menu>
    </item>

</menu>
