<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btnInfo"
        android:icon="@drawable/ic_info"
        android:orderInCategory="1"
        android:title="@string/items1"
        app:showAsAction="ifRoom"
        android:visible="true"

        ></item>
    <item
        android:id="@+id/btnMoreImage"
        android:icon="@drawable/ic_mms"
        android:orderInCategory="2"
        android:title="@string/items3"
        app:showAsAction="ifRoom"
        android:visible="true"

        ></item>
    <item
        android:id="@+id/btnTool"
        android:icon="@drawable/ic_tool"
        android:orderInCategory="3"
        android:title="@string/items4"
        app:showAsAction="ifRoom"
        android:visible="true"

        ></item>


</menu>
